--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nesux-hub-web",
+  "name": "blog-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,38 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.12.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toggle": "^1.1.9",
     "@tanstack/react-query": "^5.83.0",
+    "@tiptap/pm": "^3.0.3",
+    "@tiptap/react": "^3.0.3",
+    "@tiptap/starter-kit": "^3.0.3",
     "axios": "^1.10.0",
-    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
-    "i": "^0.3.7",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-auth": "^5.0.0-beta.29",
-    "next-theme": "^0.1.5",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "react-number-format": "^5.4.4",
+    "rehype-raw": "^7.0.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
+    "usehooks-ts": "^3.1.1",
+    "yarn": "^1.22.22",
     "yup": "^1.6.1",
     "yup-password": "^0.4.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/bcrypt": "^5.0.2",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.5",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
